engine: one Truffle language, one polyglot context; TruffleGrammarEngine is NqpGrammarEngine
RxLanguage (id nqp-rx) is folded into NqpLanguage (id nqp): parse dispatches
on the wire magic -- an nqpp program builds the Bytecode DSL root, anything
else takes the regex road (an rxd descriptor, or pattern text for the
harnesses). The match root and the constant root move to Kotlin
(RxMatchRootNode.kt); the @ExportLibrary executables stay in the Java
language file. NqpPolyglot owns the process's single Context -- one Engine,
one compiler-thread pool, one option set -- and both engines eval through
it; CodeEngine.compile takes the block name so every Source is named.

Runtime-only: no stage rebuild, no encoder change. TruffleEncoder.nqp keeps
its name on purpose (QAST layer; renaming it costs a stage2 rebuild).

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>